[project]
name = "project-orchestration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.138.0",
    "grandalf>=0.8",
    "httpx>=0.28.1",
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.6",
    "langsmith>=0.8.18",
    "mysql-connector-python>=9.7.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
